# CAOS_SEISMIC

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: index.html  package-lock.json  package.json  screenshot-outlook.mjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
configs/: completeness.yaml  declustering.yaml  etas.yaml  forecast.yaml  grid.yaml  publish.yaml  region.chile.yaml  region.global.yaml  views.yaml
data/: README.md
docs/: data-and-pipelines.md  deploy.md  evaluation.md  experiments.md  improvement-evidence.md  methodology.md  model.md
manifests/: .gitkeep  global_fetch_manifest.json
manuscripts/: .gitignore
results/: .gitkeep  backanalysis-AU-E-2026-03-17_2026-05-16.json  backanalysis-CL-2026-03-17_2026-05-16.json  backanalysis-EU-W-2026-03-17_2026-05-16.json  backanalysis-JP-2026-03-17_2026-05-16.json  backanalysis-NZ-2026-03-17_2026-05-16.json  backanalysis-US-CA-2026-03-17_2026-05-16.json  backanalysis-US-CE-2026-03-17_2026-05-16.json  backanalysis-global-2026-03-17_2026-05-16.json  benchmark.json  e12_adaptive.json  e12_multiregion.json  e12_stacked_backanalysis.json  e13_catalog_based.json  index.json  neural_gate_strain.json  neural_pseudoprospective.json  outlook-evidence-30d.json  outlook-index.json
scripts/: README.md  _common.ps1  _common.sh  backanalysis.ps1  backanalysis.sh  build-features.ps1  build-features.sh  caos-seismic-daily.service  caos-seismic-daily.timer  check.ps1  check.sh  daily.ps1  daily.sh  dev.ps1  dev.sh  fetch.ps1  fetch.sh  infer.ps1  infer.sh  outlook.ps1  schedule-daily.ps1  schedule-outlook.ps1  setup.ps1  (+3 more)
(+187 files in other folders)
