[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caos-seismic"
version = "0.1.0"
description = "Conditional probabilistic seismic forecasting — bounded, calibrated short-horizon forecasts (not predictions), evaluated CSEP-style."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Felipe Santibáñez-Leal" }]
keywords = ["seismology", "earthquake-forecasting", "ETAS", "point-process", "CSEP", "operational-earthquake-forecasting"]

# Runtime deps are tracked in requirements.txt (loose lower bounds) to keep the
# .venv setup script as the single source of truth; mirrored here as the core set.
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=15.0",
  "scipy>=1.11",
  "requests>=2.31",
  "python-dateutil>=2.8",
  "PyYAML>=6.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "h3>=4.1",
  "scikit-learn>=1.4",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
science = ["obspy>=1.4", "libcomcat>=2.0", "pycsep>=0.6", "geopandas>=0.14", "shapely>=2.0", "netCDF4>=1.6", "xarray>=2024.1", "pygtide>=0.8"]
preview = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
caos-seismic = "caos_seismic.cli:app"

[project.urls]
Repository = "https://github.com/fsantibanezleal/CAOS_SEISMIC"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
